test/error/vector2.luau
local v = vector.create(1, 2, 3)

local y = 5
v.X = y -- works with .x too
